# SuiteCompass

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
benchmarks/: degraded-suite-high-flakiness.assertions.yaml  degraded-suite-high-flakiness.input.yaml  flaky-critical-sprint.assertions.yaml  flaky-critical-sprint.input.yaml  high-risk-feature-sprint.assertions.yaml  high-risk-feature-sprint.input.yaml  llm-enhanced-high-risk.assertions.yaml  low-risk-bugfix-sprint.assertions.yaml  low-risk-bugfix-sprint.input.yaml  sample-import.xlsx  stressed-sprint-coverage-gaps.assertions.yaml  stressed-sprint-coverage-gaps.input.yaml
claude-memory/: insights.md  memory.md  notes.md
docs/: BENCHMARK-AUTHORING.md  DECISION-RULES.md  LEARNING-GUIDE.md  PHASED-IMPLEMENTATION.md  SCENARIO-LIBRARY.md  SCORING-FORMULA.md  USAGE-GUIDE.md  V1-C-EXECUTION-PLAN.md  V1-INPUT-TEMPLATE.md  V1-OUTPUT-TEMPLATE.md  VALIDATION-HARNESS.md
templates/: area-map.yaml  test_suite_template.xlsx
tests/: conftest.py  test_benchmark_runner.py  test_cli.py  test_cli_import.py  test_cli_llm.py  test_cli_merge.py  test_comparison.py  test_config_and_factory.py  test_context_classifier.py  test_contracts.py  test_diff_areas_cli.py  test_diff_mapper.py  test_end_to_end_flow.py  test_excel_loader.py  test_excel_round_trip.py  test_history_loader.py  test_init_command.py  test_input_loader.py  test_junit_xml_parser.py  test_llm_client.py  test_llm_flow.py  test_models.py  test_output_validator.py  test_package_api.py  test_pipeline_integration.py  test_prompt_builder.py  test_provider_clients.py  (+4 more)
(+35 files in other folders)
